[gd_scene load_steps=10 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://Resources/Fonts/8bitlimo.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Resources/Fonts/8bitlim.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Resources/Fonts/8bitlimr.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=4]
size = 70
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 43
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=1]
size = 38
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 38
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 38
font_data = ExtResource( 2 )

[node name="HUD" type="Node2D"]
z_index = 3
script = ExtResource( 1 )

[node name="StartText" type="Node2D" parent="."]

[node name="Title" type="Label" parent="StartText"]
margin_right = 1024.0
margin_bottom = 400.0
custom_fonts/font = SubResource( 4 )
text = "Skeleton Attack!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Instructions" type="Label" parent="StartText"]
margin_top = 158.0
margin_right = 1024.0
margin_bottom = 600.0
custom_fonts/font = SubResource( 5 )
text = "W A S D to move.
K to attack and start."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameplayText" type="Node2D" parent="."]

[node name="ScoreLabel" type="Label" parent="GameplayText"]
margin_left = 724.0
margin_right = 924.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 1 )
text = "Score"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerLabel" type="Label" parent="GameplayText"]
margin_left = 412.0
margin_right = 612.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 2 )
text = "Time"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScoreLabel" type="Label" parent="GameplayText"]
margin_left = 100.0
margin_right = 300.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 3 )
text = "High Score"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}
